@startuml

title __INVITATIONS's Class Diagram__\n

  namespace com.example.our_planner {
    namespace ui.invitations {
      class com.example.our_planner.ui.invitations.AdapterInvitations {
          ~ invitations : ArrayList<Invitation>
          + AdapterInvitations()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.invitations {
      class com.example.our_planner.ui.invitations.AdapterInvitations.ViewHolderInvitations {
          ~ acceptInvitationBtn : ImageButton
          ~ authorInvitation : TextView
          ~ declineInvitationBtn : ImageButton
          ~ imageInvitation : ImageView
          ~ titleInvitation : TextView
          + ViewHolderInvitations()
          + setData()
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.invitations {
      class com.example.our_planner.ui.invitations.InvitationsFragment {
          - recyclerViewInvitations : RecyclerView
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.invitations {
      class com.example.our_planner.ui.invitations.InvitationsViewModel {
          - mInvitations : MutableLiveData<ArrayList<Invitation>>
          - mToast : MutableLiveData<String>
          + InvitationsViewModel()
          + getInvitations()
          + getToast()
          + setToast()
          + update()
      }
    }
  }
  

  com.example.our_planner.ui.invitations.AdapterInvitations -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.our_planner.ui.invitations.AdapterInvitations +-down- com.example.our_planner.ui.invitations.AdapterInvitations.ViewHolderInvitations
  com.example.our_planner.ui.invitations.AdapterInvitations.ViewHolderInvitations -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.our_planner.ui.invitations.InvitationsFragment -up-|> androidx.fragment.app.Fragment
  com.example.our_planner.ui.invitations.InvitationsFragment o-- com.example.our_planner.ui.invitations.InvitationsViewModel : viewModel
  com.example.our_planner.ui.invitations.InvitationsViewModel .up.|> com.example.our_planner.DataBaseAdapter.InvitationInterface
  com.example.our_planner.ui.invitations.InvitationsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
